# RehPublic

./: .gitignore  .pre-commit-config.yaml  BADGE_VISUAL_GUIDE.md  CAMERA_OWNERSHIP_PRIVACY.md  DOCKER_OPTIMIZATION.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  UI_REFERENCE.md  UI_STATUS_UPDATE.md  __deploy.sh  create_random_location.sh  debug_model_output.py  delete_cam.py  delete_recent_images.py  deploy.sh  docker-bake.hcl  docker-compose.yml  polling_update.sh  smart_update.sh  swap_coordinates.py  upload_images.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.celery  README.md  create_hameln_source.py  download_deepfaune_model.py  enhanced_bilder_results.json  pyproject.toml  pytest.ini  run_migration.sh  start_api.sh  test_european_enhancement.py  test_european_results.json  test_workflow.py  trigger_image_sync.py  validate_installation.py  wildlife_camera.db  wildlife_camera.db-shm  wildlife_camera.db-wal
backend/api/: .gitignore  CURL_EXAMPLES.md  README.md  database.py  locations_controller.py  main.py  models.py  processor_integration.py  schemas.py  services.py  test_api_flow.sh  test_api_simple.sh
backend/api/images/: __init__.py  image_repository.py  image_service.py  images_controller.py  images_schemas.py
backend/api/locations/: __init__.py  location_models.py  location_repository.py  location_service.py  locations_controller.py
backend/api/root/: root_controller.py
backend/api/spottings/: __init__.py  spotting_models.py  spotting_repository.py  spotting_service.py  spottings_controller.py
backend/api/statistics/: __init__.py  (+1 more)
backend/migrations/: 001_add_auth0_support.sql  002_add_image_pull_sources.sql  003_add_location_ownership.sql
backend/models/: deepfaune-vit_large_patch14_dinov2.lvd142m.v4.pt
backend/sample_data/: README.md
backend/src/: celery_app.py
backend/tests/: IMAGE_PULL_TESTS.md  __init__.py  conftest.py  conftest_celery.py  test_classification.py  test_integration.py
backend/wildlife_processor/: __init__.py
(+195 files in other folders)
